@@ -36,6 +36,7 @@ POSSIBILITY OF SUCH DAMAGE.
 #include "libtorrent/io.hpp"
 #include "libtorrent/http_tracker_connection.hpp"
 #include "libtorrent/buffer.hpp"
+#include "libtorrent/random.hpp"
 #include "libtorrent/http_parser.hpp"
 #include "libtorrent/escape_string.hpp"
 #include "libtorrent/socket_io.hpp" // for print_address
@@ -69,18 +70,40 @@ static error_code ec;
 lsd::lsd(io_service& ios, address const& listen_interface
 	, peer_callback_t const& cb)
 	: m_callback(cb)
-	, m_retry_count(1)
-	, m_socket(ios, udp::endpoint(address_v4::from_string("239.192.152.143", ec), 6771)
+	, m_socket(udp::endpoint(address_v4::from_string("239.192.152.143", ec), 6771)
 		, boost::bind(&lsd::on_announce, self(), _1, _2, _3))
 	, m_broadcast_timer(ios)
+	, m_retry_count(1)
+	, m_cookie(random())
 	, m_disabled(false)
 {
 #if defined(TORRENT_LOGGING) || defined(TORRENT_VERBOSE_LOGGING)
-	m_log.open("lsd.log", std::ios::in | std::ios::out | std::ios::trunc);
+	m_log = fopen("lsd.log", "w+");
+	if (m_log == NULL)
+	{
+		fprintf(stderr, "failed to open 'lsd.log': (%d) %s"
+			, errno, strerror(errno));
+	}
+#endif
+
+	error_code ec;
+	m_socket.open(ios, ec);
+
+#if defined(TORRENT_LOGGING) || defined(TORRENT_VERBOSE_LOGGING)
+	if (ec)
+	{
+		if (m_log) fprintf(m_log, "FAILED TO OPEN SOCKET: (%d) %s\n"
+			, ec.value(), ec.message().c_str());
+	}
 #endif
 }
 
-lsd::~lsd() {}
+lsd::~lsd()
+{
+#if defined(TORRENT_LOGGING) || defined(TORRENT_VERBOSE_LOGGING)
+	if (m_log) fclose(m_log);
+#endif
+}
 
 void lsd::announce(sha1_hash const& ih, int listen_port, bool broadcast)
 {
@@ -94,7 +117,15 @@ void lsd::announce(sha1_hash const& ih, int listen_port, bool broadcast)
 		"Host: 239.192.152.143:6771\r\n"
 		"Port: %d\r\n"
 		"Infohash: %s\r\n"
-		"\r\n\r\n", listen_port, ih_hex);
+		"cookie: %x\r\n"
+		"\r\n\r\n", listen_port, ih_hex, m_cookie);
+
+#if defined(TORRENT_LOGGING) || defined(TORRENT_VERBOSE_LOGGING)
+	{
+		if (m_log) fprintf(m_log, "%s ==> announce: ih: %s port: %u\n"
+			, time_now_string(), ih_hex, listen_port);
+	}
+#endif
 
 	m_retry_count = 1;
 	error_code ec;
@@ -102,17 +133,15 @@ void lsd::announce(sha1_hash const& ih, int listen_port, bool broadcast)
 	if (ec)
 	{
 		m_disabled = true;
+#if defined(TORRENT_LOGGING) || defined(TORRENT_VERBOSE_LOGGING)
+		{
+			if (m_log) fprintf(m_log, "%s failed to send message: (%d) %s"
+				, time_now_string(), ec.value(), ec.message().c_str());
+		}
+#endif
+
 		return;
 	}
-
-#if defined(TORRENT_LOGGING) || defined(TORRENT_VERBOSE_LOGGING)
-	{
-		char msg[200];
-		snprintf(msg, sizeof(msg), "%s ==> announce: ih: %s port: %u"
-			, time_now_string(), ih_hex, listen_port);
-		m_log << msg << std::endl;
-	}
-#endif
 
 #if defined TORRENT_ASIO_DEBUGGING
 	add_outstanding_async("lsd::resend_announce");
@@ -156,8 +185,7 @@ void lsd::on_announce(udp::endpoint const& from, char* buffer
 	if (!p.header_finished() || error)
 	{
 #if defined(TORRENT_LOGGING) || defined(TORRENT_VERBOSE_LOGGING)
-	m_log << time_now_string()
-		<< " <== announce: incomplete HTTP message" << std::endl;
+		if (m_log) fprintf(m_log, "%s <== announce: incomplete HTTP message\n", time_now_string());
 #endif
 		return;
 	}
@@ -165,8 +193,8 @@ void lsd::on_announce(udp::endpoint const& from, char* buffer
 	if (p.method() != "bt-search")
 	{
 #if defined(TORRENT_LOGGING) || defined(TORRENT_VERBOSE_LOGGING)
-	m_log << time_now_string()
-		<< " <== announce: invalid HTTP method: " << p.method() << std::endl;
+		if (m_log) fprintf(m_log, "%s <== announce: invalid HTTP method: %s\n"
+			, time_now_string(), p.method().c_str());
 #endif
 		return;
 	}
@@ -175,8 +203,8 @@ void lsd::on_announce(udp::endpoint const& from, char* buffer
 	if (port_str.empty())
 	{
 #if defined(TORRENT_LOGGING) || defined(TORRENT_VERBOSE_LOGGING)
-		m_log << time_now_string()
-			<< " <== announce: invalid BT-SEARCH, missing port" << std::endl;
+		if (m_log) fprintf(m_log, "%s <== announce: invalid BT-SEARCH, missing port\n"
+			, time_now_string());
 #endif
 		return;
 	}
@@ -185,6 +213,23 @@ void lsd::on_announce(udp::endpoint const& from, char* buffer
 
 	typedef std::multimap<std::string, std::string> headers_t;
 	headers_t const& headers = p.headers();
+
+	headers_t::const_iterator cookie_iter = headers.find("cookie");
+	if (cookie_iter != headers.end())
+	{
+		// we expect it to be hexadecimal
+		// if it isn't, it's not our cookie anyway
+		boost::uint32_t cookie = strtol(cookie_iter->second.c_str(), NULL, 16);
+		if (cookie == m_cookie)
+		{
+#if defined(TORRENT_LOGGING) || defined(TORRENT_VERBOSE_LOGGING)
+			if (m_log) fprintf(m_log, "%s <== announce: ignoring packet (cookie matched our own): %x == %x\n"
+				, time_now_string(), cookie, m_cookie);
+#endif
+			return;
+		}
+	}
+
 	std::pair<headers_t::const_iterator, headers_t::const_iterator> ihs
 		= headers.equal_range("infohash");
 
@@ -194,9 +239,8 @@ void lsd::on_announce(udp::endpoint const& from, char* buffer
 		if (ih_str.size() != 40)
 		{
 #if defined(TORRENT_LOGGING) || defined(TORRENT_VERBOSE_LOGGING)
-			m_log << time_now_string()
-				<< " <== announce: invalid BT-SEARCH, invalid infohash: "
-				<< ih_str << std::endl;
+			if (m_log) fprintf(m_log, "%s <== announce: invalid BT-SEARCH, invalid infohash: %s\n"
+				, time_now_string(), ih_str.c_str());
 #endif
 			continue;
 		}
@@ -207,8 +251,7 @@ void lsd::on_announce(udp::endpoint const& from, char* buffer
 		if (!ih.is_all_zeros() && port != 0)
 		{
 #if defined(TORRENT_LOGGING) || defined(TORRENT_VERBOSE_LOGGING)
-			char msg[200];
-			snprintf(msg, 200, "%s *** incoming local announce %s:%d ih: %s\n"
+			if (m_log) fprintf(m_log, "%s *** incoming local announce %s:%d ih: %s\n"
 				, time_now_string(), print_address(from.address()).c_str()
 				, port, ih_str.c_str());
 #endif
