@@ -140,8 +140,10 @@ int run_upnp_test(char const* root_filename, char const* router_model, char cons
 	xml.write(soap_add_response, sizeof(soap_add_response)-1);
 	xml.close();
 
-	sock = new broadcast_socket(ios, udp::endpoint(address_v4::from_string("239.255.255.250"), 1900)
+	sock = new broadcast_socket(udp::endpoint(address_v4::from_string("239.255.255.250"), 1900)
 		, &incoming_msearch);
+
+	sock->open(ios, ec);
 
 	std::string user_agent = "test agent";
 
